IE fixes and various updates
- Fix layout issues in IE11
- Small housekeeping fixes
- Minor updates for package-lock.json

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -8,6 +8,7 @@
     z-index: 10;
     background: white;
     @include transition();
+
     .container{
         display: flex;
         align-items: center;
@@ -20,7 +21,6 @@
         width: 40vw;
         svg{
             width: 100%;
-            height: auto;
         }
     }
 
