--- a/src/theme/_layout.scss
+++ b/src/theme/_layout.scss
@@ -64,7 +64,7 @@ svg{
     }
 }
 
-main{
+div[role="main"]{
     margin-top: -4rem !important;
 }
 
